services/focalboard.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: focalboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: focalboard
  template:
    metadata:
      labels:
        app: focalboard
    spec:
      containers:
        - name: focalboard
          image: mattermost/focalboard:latest
          imagePullPolicy: Always
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: focalboard
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: focalboard
