services/syra-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: syra-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
      - syra.live
      - api.syra.live
      - daw.syra.live
    secretName: echo-tls
  rules:
    - host: syra.live
      http:
        paths:
          - backend:
              serviceName: syra-live-fe
              servicePort: 80
    - host: api.syra.live
      http:
        paths:
          - backend:
              serviceName: syra-live-gql
              servicePort: 80
    - host: daw.syra.live
      http:
        paths:
          - backend:
              serviceName: syra-daw-fe
              servicePort: 80
